[package]
name = "libp2p-rs"
version = "0.1.0"
license = "MIT"
description = "Minimal implementation for a multiplexed p2p network framework"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[package.metadata.docs.rs]
all-features = false
no-default-features = true

[dependencies]
libp2prs-traits = { path = "traits", version = "0.1.0", package = "libp2prs-traits" }
libp2prs-multiaddr = { path = "multiaddr", version = "0.1.0", package = "libp2prs-multiaddr"}
libp2prs-core = { path = "core", version = "0.1.0", package = "libp2prs-core" }
libp2prs-yamux = { path = "protocols/yamux", version = "0.1.0", package = "libp2prs-yamux" }
libp2prs-mplex = { path = "protocols/mplex", version = "0.1.0", package = "libp2prs-mplex" }
libp2prs-secio = { path = "protocols/secio", version = "0.1.0", package = "libp2prs-secio" }
libp2prs-plaintext = { path = "protocols/plaintext", version = "0.1.0", package = "libp2prs-plaintext" }
libp2prs-noise = { path = "protocols/noise", version = "0.1.0", package = "libp2prs-noise" }
libp2prs-floodsub = { path = "protocols/floodsub", version = "0.1.0", package = "libp2prs-floodsub" }
libp2prs-mdns = { path = "protocols/mdns", version = "0.1.0", package = "libp2prs-mdns" }
libp2prs-tcp = { path = "transports/tcp", version = "0.1.0", package = "libp2prs-tcp" }
libp2prs-dns = { path = "transports/dns", version = "0.1.0", package = "libp2prs-dns" }
libp2prs-websocket = { path = "transports/websocket", version = "0.1.0", package = "libp2prs-websocket" }
libp2prs-swarm = { path = "swarm", version = "0.1.0", package = "libp2prs-swarm" }
libp2prs-kad = { path = "protocols/kad", version = "0.1.0", package = "libp2prs-kad" }
libp2prs-infoserver = { path="infoserver", version = "0.1.0", package = "libp2prs-infoserver" }
libp2prs-exporter = { path="exporter", version = "0.1.0", package = "libp2prs-exporter" }

async-std = { version = "1.6", features = ["attributes", "unstable"] }
async-trait = "0.1"
futures = { version = "0.3.5" }
pin-project-lite = "0.1"
log = "0.4"
bytes = "0.5.0"
igd = "0.9"
#xcli = { path = "xcli", version = "0.2.0", package = "xcli" }
xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master"}

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.7"
features = ["minwindef", "ws2def", "winerror", "heapapi"]

[dev-dependencies]
env_logger = "0.6.0"
crossbeam-channel = "0.3.6"
systemstat = "0.1.3"
futures-test = "0.3.5"
secp256k1 = "0.17"
rand = "0.7"
lazy_static = "1.4"

async-tls="0.8"
rustls = "0.18.0"
structopt = "0.3.9"
async-std = "1.6"
webpki = "0.21.2"


[target.'cfg(unix)'.dev-dependencies]
nix = "0.13.0"

[workspace]
members = [
  "traits",
  "protocols/yamux",
  "protocols/mplex",
  "protocols/secio",
  "protocols/plaintext",
  "protocols/noise",
  "protocols/floodsub",
  "protocols/mdns",
  "protocols/kad",
  "core",
  "transports/tcp",
  "transports/dns",
  "transports/websocket",
  "multiaddr",
  "swarm",
]

[[example]]
name = "secio_simple"
path = "protocols/secio/examples/secio_simple.rs"

[[example]]
name = "chat"
path = "examples/chat/chat.rs"

[[example]]
name = "websocket"
path = "examples/websocket/websocket.rs"

[[example]]
name = "websocket_tls"
path = "examples/websocket/websocket_tls.rs"
