[package]
name = "libp2p-core"
edition = "2018"
description = "Core traits and structs of libp2p"
version = "0.1.0"
authors = ["kuang_ql"]
license = "MIT"
repository = ""
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]


[dependencies]
asn1_der = "0.6.1"
bs58 = "0.3.0"
ed25519-dalek ={ version="1.0.0-pre.4"}
fnv = "1.0"
futures = { version = "0.3.1", features = ["executor", "thread-pool"] }
futures-timer = "3"
lazy_static = "1.2"
libsecp256k1 = { version = "0.3.1", optional = true }
log = "0.4"
multihash = "0.11.0"
prost = "0.6.1"
rand = "0.7"
sha2 = "0.8.0"
smallvec = "1.0"
thiserror = "1.0"
unsigned-varint = "0.3"
zeroize = "1"
async-trait = "0.1"
multiaddr = { package = "parity-multiaddr", version = "0.9.1", path = "../multiaddr" }

[target.'cfg(not(any(target_os = "emscripten", target_os = "unknown")))'.dependencies]
ring = { version = "0.16.9", features = ["alloc", "std"], default-features = true }

[dev-dependencies]
async-std = "1.6.2"
quickcheck = "0.9.0"
wasm-timer = "0.2"

[build-dependencies]
prost-build = "0.6"

[features]
default = ["secp256k1"]
secp256k1 = ["libsecp256k1"]