[package]
name = "libp2prs-core"
version = "0.3.0"
license = "MIT"
description = "Core traits and structs of libp2p"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
asn1_der = "0.6.1"
bs58 = "0.4.0"
ed25519-dalek ={ version="1.0.0-pre.4"}
fnv = "1.0"
futures = { version = "0.3", features = ["std"], default-features = false }
futures-timer = "3"
lazy_static = "1.2"
libsecp256k1 = { version = "0.3.1", optional = true }
log = "0.4"
multihash = { version = "0.13", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }
prost = "0.6.1"
rand = "0.7"
sha2 = "0.8.0"
smallvec = "1.0"
thiserror = "1.0"
unsigned-varint = "0.4"
zeroize = "1"
async-trait = "0.1"
parking_lot = "0.10.0"
rw-stream-sink = "0.2.0"
bytes = "0.5"
pin-project = "0.4"
libp2p-pnet = "0.20.0"
crossbeam-epoch = "0.9"

ring = { version = "0.16.9", features = ["alloc", "std"], default-features = true }
salsa20 = "0.7"
sha3 = "0.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

libp2prs-multiaddr = { path = "../multiaddr", version = "0.3.0" }

[dev-dependencies]
quickcheck = "0.9.0"
libp2prs-runtime = { path = "../runtime", version = "0.3.0", features = ["async-std"] }
multihash = { version = "0.13", default-features = false, features = ["arb"] }

[build-dependencies]
prost-build = "0.6"

[features]
default = ["secp256k1"]
secp256k1 = ["libsecp256k1"]

