[package]
name = "libp2prs-exporter"
version = "0.4.0"
license = "MIT"
description = "The libp2p exporter"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
log = "0.4"
futures = { version = "0.3", features = ["std"], default-features = false }
tide = "0.15.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
prometheus = "0.10.0"
libp2prs-runtime = { path = "../runtime", version = "0.4.0", features = ["async-std"] }
libp2prs-swarm = { path = "../swarm", version = "0.4.0" }
libp2prs-core = { path = "../core", version = "0.4.0" }

[dev-dependencies]
quickcheck = "0.9.0"
rand = "0.7"
env_logger = "0.8"
