[package]
name = "libp2prs-multiaddr"
version = "0.1.0"
license = "MIT"
description = "Implementation of the multiaddr format"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
arrayref = "0.3"
bs58 = "0.3.0"
byteorder = "1.3.1"
data-encoding = "2.1"
multihash = "0.11.0"
percent-encoding = "2.1.0"
serde = "1.0.70"
static_assertions = "1.1"
unsigned-varint = "0.4"
url = { version = "2.1.0", default-features = false }

[dev-dependencies]
bincode = "1"
quickcheck = "0.9.0"
rand = "0.7.2"
serde_json = "1.0"
