[package]
name = "libp2p-swarm"
edition = "2018"
description = "The libp2p swarm"
version = "0.1.0"
authors = ["netwarps"]
license = "MIT"
repository = ""
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
async-std = "1.6"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
rand = "0.7"
fnv = "1.0"
smallvec = "1.0"
void = "1"
libp2p-traits = { path = "../traits", version = "0.1.0", package = "libp2p-traits" }
libp2p-core = { version = "0.1.0", path = "../core" }

[dev-dependencies]
#libp2p-mplex = { path = "../muxer/mplex" }
quickcheck = "0.9.0"
rand = "0.7.2"
