[package]
name = "libp2prs-swarm"
version = "0.1.0"
license = "MIT"
description = "The libp2p swarm"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
async-trait = "0.1"
async-std = "1.6"
futures = "0.3"
futures-timer="3.0.2"
log = "0.4"
rand = "0.7"
fnv = "1.0"
smallvec = "1.0"
prost = "0.6"
void = "1"
crossbeam-epoch = "0.9.0"
#xcli = { path = "xcli", version = "0.2.0", package = "xcli" }
xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master"}
libp2prs-traits = { path = "../traits", version = "0.1.0", package = "libp2prs-traits" }
libp2prs-core = { path = "../core", version = "0.1.0", package = "libp2prs-core" }

[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
quickcheck = "0.9.0"
rand = "0.7.2"
env_logger = "0.8.1"
