[package]
name = "libp2prs-swarm"
version = "0.3.0"
license = "MIT"
description = "The libp2p swarm"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[features]
async-std = ["libp2prs-runtime/async-std"]
tokio = ["libp2prs-runtime/tokio"]

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["std"], default-features = false }
log = "0.4"
rand = "0.7"
fnv = "1.0"
smallvec = "1.0"
prost = "0.6"
void = "1"
#crossbeam-epoch = "0.9"
xcli = "0.5"
#xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master"}
libp2prs-runtime = { path = "../runtime", version = "0.3.0" }
libp2prs-core = { path = "../core", version = "0.3.0" }
futures-timer = "3"

[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
quickcheck = "0.9.0"
rand = "0.7"
env_logger = "0.8"
