[package]
name = "libp2prs-floodsub"
version = "0.4.0"
license = "MIT"
description = "Floodsub protocol for libp2p"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "pubsub"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async-std = ["libp2prs-swarm/async-std", "libp2prs-runtime/async-std"]
tokio = ["libp2prs-swarm/tokio", "libp2prs-runtime/tokio"]

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["std"], default-features = false }
libp2prs-runtime = { path = "../../runtime", version = "0.4.0" }
libp2prs-core = { path = "../../core", version = "0.4.0" }
libp2prs-swarm = { path = "../../swarm", version = "0.4.0" }
log = "0.4"
prost = "0.6"
rand = "0.7"
smallvec = "1.0"
nohash-hasher = "0.2"

[dev-dependencies]
env_logger = "0.8"
libp2prs-mplex = { path = "../mplex", version = "0.4.0" }
libp2prs-yamux = { path = "../yamux", version = "0.4.0" }
libp2prs-secio = { path = "../secio", version = "0.4.0" }
libp2prs-tcp = { path = "../../transports/tcp", version = "0.4.0", features = ["async-std"] }
lazy_static = "1.4"
quickcheck = "0.9"

[build-dependencies]
prost-build = "0.6.1"