[package]
name = "libp2prs-kad"
edition = "2018"
description = "Kademlia protocol for libp2p"
version = "0.1.0"
authors = ["Netwarps Technologies admin@paradeum.com"]
license = "MIT"
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "kad", "dht"]
categories = ["network-programming", "asynchronous"]

[dependencies]
arrayvec = "0.5.1"
bytes = "0.5"
fnv = "1.0"
futures = "0.3.1"
log = "0.4"
multihash = "0.11.3"
prost = "0.6.1"
primitive-types = "0.7.3"
rand = "0.7.2"
sha2 = "0.9.1"
smallvec = "1.0"
void = "1.0"
async-trait = "0.1"
async-std = "1.6"
wasm-timer = "0.2"
futures-timer = "3.0"
#xcli = { path = "xcli", version = "0.2.0", package = "xcli" }
xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master"}

libp2prs-core = { path = "../../core", version = "0.2.0", package = "libp2prs-core" }
libp2prs-traits = { path = "../../traits", version = "0.2.0", package = "libp2prs-traits" }
libp2prs-swarm = { path = "../../swarm", version = "0.2.0", package = "libp2prs-swarm" }


[dev-dependencies]
env_logger = "0.6.0"
libp2prs-mplex = { path = "../mplex", version = "0.2.0", package = "libp2prs-mplex" }
libp2prs-yamux = { path = "../yamux", version = "0.2.0", package = "libp2prs-yamux" }
libp2prs-secio = { path = "../secio", version = "0.2.0", package = "libp2prs-secio" }
libp2prs-plaintext = { path = "../plaintext", version = "0.2.0", package = "libp2prs-plaintext" }

libp2prs-tcp = { path = "../../transports/tcp", version = "0.2.0", package = "libp2prs-tcp" }
lazy_static = "1.4"
quickcheck = "0.9"

[build-dependencies]
prost-build = "0.6"

