[package]
name = "libp2prs-mplex"
version = "0.2.2"
license = "MIT"
description = "Mplex multiplexing protocol for libp2p"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
futures = { version = "0.3", features = ["std"], default-features = false }
libp2prs-traits = { path = "../../traits", version = "0.2.1" }
libp2prs-core = { path = "../../core", version = "0.2.2" }
nohash-hasher = "0.2"
unsigned-varint = "0.4"
async-trait = "0.1"
bytes = "0.5.6"
log = "0.4.8"
rand = "0.7"
futures-timer = "3"

[dev-dependencies]
env_logger = "0.8"
criterion = "0.3"
libp2prs-runtime = { path = "../../runtime", version = "0.2.1", features = ["async-std"] }

[dev-dependencies.quickcheck]
version = "0.9"